--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~40.0.0",
+    "@react-native-async-storage/async-storage": "^1.14.1",
+    "expo": "~40.0.1",
+    "expo-keep-awake": "~8.4.0",
     "expo-status-bar": "~1.0.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "nanoid": "^3.1.21",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-get-random-values": "^1.6.0",
     "react-native-paper": "^4.7.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.15.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@babel/core": "~7.13.10",
+    "@types/react": "~17.0.3",
+    "@types/react-dom": "~17.0.2",
+    "@types/react-native": "~0.63.51",
+    "typescript": "~4.2.3"
   },
   "private": true
 }
